--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,43 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+body {
+  margin: 0.5rem auto;
+  padding: 0 0.5rem;
+}
+
+body,
+input {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1.1rem;
+}
+
+h1, h2, h3 {
+  margin: 1rem 0;
+}
+
+.split-form {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.form-left, .form-right {
+  width: 50%;
+}
+
+.split-form input {
+  margin: 0.5rem 0;
+}
+
+.split-form > input:last-of-type {
+  margin-top: 1.5rem;
+  padding: 1rem 0;
+  width: 100%;
+}
+
+@media screen and (min-width: 900px) {
+  body {
+    width: 900px;
+  }
+}
