--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,8 @@ body {
 }
 
 body,
-input {
+input,
+button {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1.1rem;
 }
@@ -19,6 +20,7 @@ h1, h2, h3 {
   margin: 1rem 0;
 }
 
+/* Form */
 .split-form {
   display: flex;
   flex-wrap: wrap;
@@ -29,13 +31,65 @@ h1, h2, h3 {
 }
 
 .split-form input {
+  display: block;
   margin: 0.5rem 0;
 }
 
-.split-form > input:last-of-type {
-  margin-top: 1.5rem;
+.split-form > input:last-of-type,
+.reset-btn {
+  margin-top: 1rem;
   padding: 1rem 0;
   width: 100%;
+}
+/* End form */
+
+/* Timer */
+.timer-view {
+  display: flex;
+  flex-direction: column;
+  /* justify-content: space-between; */
+  margin: 1rem 0;
+}
+
+.pomodoro, .break {
+  text-align: center;
+}
+
+.pomodoro {
+  background: rgb(139, 206, 105);
+  padding: 1.4rem 0;
+}
+
+.break {
+  padding: 0.5rem 0;
+}
+
+.lunch {
+  padding: 1rem 0;
+}
+/* End timer */
+
+@media screen and (min-width: 600px) {
+  .timer-view {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .pomodoro, .break {
+    padding: 2rem 0;
+  }
+
+  .pomodoro {
+    flex: 12;
+  }
+
+  .break {
+    flex: 5;
+  }
+
+  .lunch {
+    flex: 8;
+  }
 }
 
 @media screen and (min-width: 900px) {
