--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,6 @@ h1, h2, h3 {
 .timer-view {
   display: flex;
   flex-direction: column;
-  /* justify-content: space-between; */
   margin: 1rem 0;
 }
 
@@ -68,6 +67,10 @@ h1, h2, h3 {
   padding: 1rem 0;
 }
 /* End timer */
+
+.hide {
+  display: none;
+}
 
 @media screen and (min-width: 600px) {
   .timer-view {
